# connec-4

./: CMakeLists.txt  README.md
src/: ConnectFour.cpp  ConnectFour.h  main.cpp
tests/: basic.cpp
